@@ -1,5 +1,13 @@
 2008-11-01	Brian Tarricone <bjt23@cornell.edu>
 
+	* xfce4-session/xfsm-manager.c: Watch for dbus disconnects and
+	  be sure we aren't terminated.
+	* xfce4-session/xfsm-{client,manager}.c: Manage the lifecycle of
+	  the DBusGConnection reference; not strictly necessary, as it
+	  should be a shared connection, but I like being correct.
+
+2008-11-01	Brian Tarricone <bjt23@cornell.edu>
+
 	* xfce4-session/xfsm-shutdown-helper.c: Use dbus-default method
 	  call timeout (which appears to be 25 seconds) rather than hard-
 	  coding 2 seconds.  Fix a possible crash if a possible (however
